Fixed background image from not showing up on certain pages

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,4 @@
-body {
+.image_container {
     background: url(cover3.jpg) no-repeat center center fixed;
     background-size: cover;
 }
